# PMDashboardCaseStudy

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd_driver.yaml  push_container_image_to_dockerhub.yaml
src/: main.py  test_scripts.py
src/analytics/: back_test_summary.py  risk_attributions.py  trade_summary.py
src/back_test/: __init__.py  back_test.py  create_aggregated_fund_trades.py
src/data_access/: crud_util.py  prices.py  risk_model.py  schemas.py  sqllite_db_manager.py  trade_booking.py
src/data_prep/riskmodel_creation/: fama_french_risk_model_5_weekly_only_ind_factors.py  store_risk_factor_covariance_in_database.py  store_risk_factor_exposure_in_database.py  store_spcrisk_residuals_in_database.py
src/data_prep/sp500_data/: aum_and_leverage.sql  download_sp500_constituents_weights.py  download_sp500_data.py  download_sp500_index_prices.py  download_sp500_marketcaps.py  download_sp500_risk_model_inputs.py  download_sp500_static_data.py  (+3 more)
src/portfolio_construction/: __init__.py
src/rebalance/: rebalance_portfolio.py
src/strategy/: create_strategy_scores.py  strategy.py  strategy_utils.py
src/visualizations/: Back_Test_Dashboard.py  README.md
tests/analytics/: test_back_test_summary_analytics.py  test_risk_attributions.py
tests/backtests/: test_back_test.py
tests/portfolio_construction/: test_create_portfolio_weights.py  test_cvxpy_optimizer.py  test_greedy_allocation.py
tests/rebalance/: test_rebalance_portfolio.py
tests/strategy/: test_min_vol.py  test_roc_momentum.py
(+42 files in other folders)
