[project]
name = "portfolio_construction"
version = "0.1.0"
dependencies = [
    "black>=25.1.0",
    "bokeh>=3.7.2",
    "cloc>=0.2.5",
    "cvxopt>=1.3.2",
    "cvxpy>=1.6.5",
    "isort>=6.0.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pygount>=2.0.0",
    "pyscipopt>=5.4.1",
    "pytest>=8.3.5",
    "ruff>=0.11.7",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "swiglpk>=5.0.12",
    "yfinance>=0.2.55",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
